2015-01-22 Andre Heinecke <aheinecke@intevation.de>

	* samba/CMakeLists.txt: Configure dynconfig.c.in
	* samba/dynconfig.c: Renable to dynconfig.c.in

2015-01-22 Andre Heinecke <aheinecke@intevation.de>

	* winexe/wincmd.c(on_io_pipe_read, on_err_pipe_read): Limit
	output length to avoid overflow in result buffer.

2015-01-22 Andre Heinecke <aheinecke@intevation.de>

	* cmake/FindGSSAPI.cmake: Remove MIT detection.
	Enable multidev detection.
	* INSTALL: Mention the multidev alternative.

2015-01-21 Andre Heinecke <aheinecke@intevation.de>

	* winexe/wincmd.c (smb_close): Remove and replace
	by direct usage of talloc_free.

2015-01-21 Andre Heinecke <aheinecke@intevation.de>

	* winexe/wincmd.c (on_ctrl_pipe_error, on_ctrl_pipe_read)
	(on_ctrl_pipe_close): Fix pipe name.

2015-01-21 Andre Heinecke <aheinecke@intevation.de>

	* samba/include/config.h: Remove unused / wrong size macros.

	* samba/lib/replace/replace.c (rep_strtoll, rep_strtoull):
	Remove unused portability code.

2015-01-21 Andre Heinecke <aheinecke@intevation.de>

	* CMakeLists.txt: Disable strict-aliasing again.

2015-01-21 Andre Heinecke <aheinecke@intevation.de>

	* CMakeLists.txt: Fix check for heimdal flavor.

2015-01-20 Andre Heinecke <aheinecke@intevation.de>

	* winexe/CMakeLists.txt, samba/CMakeLists.txt: Remove
	unused include dir.
	* samba/torture: Remove recursively.

2015-01-20 Andre Heinecke <aheinecke@intevation.de>

	Remove included popt code and use system libray

	* INSTALL: Note down depedency.
	* cmake/FindPopt.cmake: New.
	* samba/lib/popt: Removed recursively.
	* CMakeLists.txt: Find popt.
	* winexe/CMakeLists.txt: Link / include popt.
	* samba/CMakeLists.txt: Include popt headers.

2015-01-20 Andre Heinecke <aheinecke@intevation.de>

	* samba/FindGSSAPI.cmake: Add BSD license terms.

2015-01-20 Andre Heinecke <aheinecke@intevation.de>

	Removal of included heimdal code. Using system heimdal libraries now.

	* CMakeLists.txt: Add lookup for GSSAPI. For now force heimdal.