@@ -26,11 +26,9 @@ set (SMB_INCLUDES
    ${CMAKE_SOURCE_DIR}/samba
    ${CMAKE_SOURCE_DIR}/samba/include
    ${CMAKE_SOURCE_DIR}/samba/lib
-   ${CMAKE_SOURCE_DIR}/samba/lib/popt
    ${CMAKE_SOURCE_DIR}/samba/lib/replace
    ${CMAKE_SOURCE_DIR}/samba/ntvfs
    ${CMAKE_SOURCE_DIR}/samba/param
-   ${CMAKE_SOURCE_DIR}/samba/torture
    ${CMAKE_SOURCE_DIR}/samba/winexe
    ${CMAKE_BINARY_DIR}/samba
 )
